testdata/baselines/reference/submodule/conformance/nodeModulesImportAttributesModeDeclarationEmitErrors(module=nodenext).errors.txt
/index.ts(2,45): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(4,10): error TS2305: Module '""/node_modules/pkg/require.d.ts""' has no exported member 'ImportInterface'.
/index.ts(4,39): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(4,39): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
/index.ts(6,76): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(6,76): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.


==== /index.ts (6 errors) ====
    // incorrect mode
    import type { RequireInterface } from "pkg" with { "resolution-mode": "foobar" };
                                                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    // not type-only
    import { ImportInterface } from "pkg" with { "resolution-mode": "import" };
             ~~~~~~~~~~~~~~~
!!! error TS2305: Module '""/node_modules/pkg/require.d.ts""' has no exported member 'ImportInterface'.
                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    // not exclusively type-only
    import {type RequireInterface as Req, RequireInterface as Req2} from "pkg" with { "resolution-mode": "require" };
                                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
                                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    
    export interface LocalInterface extends RequireInterface, ImportInterface {}
    
    
    
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}